Spock works. First tests are added